--- a/Geojam.CrossingBridges/Geojam.CrossingBridges.csproj
+++ b/Geojam.CrossingBridges/Geojam.CrossingBridges.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Properties\Data\Input.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
